[project]
name = "sthaty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pip>=25.1.1", "torch>=2.7.1", "transformers>=4.52.4"]
[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
indent-width = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
